# llama.rust

./: .gitignore  Cargo.toml  Makefile  README.md
all-close/: Cargo.toml  README.md
all-close/src/: lib.rs
docs/: README.md
examples/: bpe.rs  embedding.rs  imbalance.rs  random-split.rs  softmax.rs  st.rs
flash-attention/: Cargo.toml  README.md
inference/: Cargo.toml  README.md
inference/docs/: download.md
inference/examples/: encode-label.rs  random-split.rs  self_attention.rs  st.rs
inference/src/: args.rs  config.rs  inference.rs  lib.rs  main.rs  model.rs  tokenizer.rs
kv-cache/: Cargo.toml  README.md
kv-cache/src/: lib.rs
linear-attention/: Cargo.toml  README.md
llama/: Cargo.toml
llama/src/: config.rs  main.rs  norm.rs
multihead-attention/: Cargo.toml  README.md
ollama/: Cargo.toml  README.md
ollama/src/: lib.rs
paged-attention/: Cargo.toml  README.md
python/: nn.py
round-multiple/: Cargo.toml  README.md
round-multiple/src/: lib.rs
scaled-dot-product-attention/: Cargo.toml  README.md
scaled-dot-product-attention/src/: lib.rs
sigmoid/: Cargo.toml
sigmoid/src/: lib.rs
src/: lib.rs  main.rs  model.rs
tests/: llama.rs
