[package]
name = "llama-rust"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
candle-core.workspace = true
candle-transformers.workspace = true
candle-nn.workspace = true
polars.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
rand.workspace = true
rand_isaac.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true