[package]
name = "scaled-dot-product-attention"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
all-close.workspace = true