[package]
name = "scaled-dot-product-attention"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
all-close.workspace = true